--- a/wire-frame.css
+++ b/wire-frame.css
@@ -2,7 +2,10 @@
    mid grey #8F8F8F
    dark grey #555555
    charcoal #3A3A3A    */
-
+a {
+	color: white;
+	text-decoration: none;
+}
 body {
 	margin: 0;
 	padding: 0;
